# msi-util

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: build.yml  release.yml
src/: cab.cpp  cab.hpp  cfb.cpp  cfb.hpp  main.cpp  msi.cpp  msi.hpp
